--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,12 @@
-backend_url =your backend url
-sentiment_analyzer_url=your code engine deployment url
+backend_url =https://panucciodonn-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url=https://sentianalyzer.1louywf9v5pp.us-south.codeengine.appdomain.cloud/
+
+def analyze_review_sentiments(text):
+    request_url = sentiment_analyzer_url+"analyze/"+text
+    try:
+        # Call get method of requests library with URL and parameters
+        response = requests.get(request_url)
+        return response.json()
+    except Exception as err:
+        print(f"Unexpected {err=}, {type(err)=}")
+        print("Network exception occurred")
