--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,5 +1,5 @@
 backend_url =https://panucciodonn-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1louywf9v5pp.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer1.1louywf9v5pp.us-south.codeengine.appdomain.cloud/
 
 def analyze_review_sentiments(text):
     request_url = sentiment_analyzer_url+"analyze/"+text
